k8s/base/items-deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-deployment
  labels:
    app: items
spec:
  replicas: 2
  selector:
    matchLabels:
      app: items
  template:
    metadata:
      labels:
        app: items
    spec:
      containers:
      - name: items
        image: towfiqueahmmed/restauranty-items:v1.0.1
        ports:
        - containerPort: 3003
