k8s/base/client-deployment-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: towfiqueahmmed/restauranty-client:v1.0.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  labels:
    app: client
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
