k8s/base/discounts-deployment-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discounts-deployment
  labels:
    app: discounts
spec:
  replicas: 2
  selector:
    matchLabels:
      app: discounts
  template:
    metadata:
      labels:
        app: discounts
    spec:
      containers:
      - name: discounts
        image: towfiqueahmmed/restauranty-discount:v1.0.1
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: discounts-service
  labels:
    app: discounts
spec:
  selector:
    app: discounts
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
