k8s/base/ingress-one.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: 2fik.diogohack.shop
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /api/discounts
            pathType: Prefix
            backend:
              service:
                name: discounts-service
                port:
                  number: 3002
          - path: /api/items
            pathType: Prefix
            backend:
              service:
                name: items-service
                port:
                  number: 3003
