k8s/base/ingress-two.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spa-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: 2fik.diogohack.shop
    http:
      paths:
      - path: "/(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-service
            port:
              number: 80
